08/12/2023 - V7.0.13
#####################################
1. Added filters for IAs
2. Fixed stock adjustment computation
3. Added cc to IA
4. Added Custom notifications
5. Add cc override in Fund

07/12/2023 - V7.0.12
#####################################
1. KYCs UI changes
2. Face Val For Redemption included in KYC uncalled amount
3. Using FormCard across all forms
4. Formula Rerun


04/12/2023 - V7.0.11
#####################################

1. Added WA enabled to entity
2. Better Individual/Non I KYCs
3. Changed client side validations
4. Enabled file validations for forms in wizard


02/12/2023 - V7.0.10
#####################################

#### Bugs
1. Fixed bugs for import investor advisor
2. Added support for file type custom field
3. Fixed the size of forms
4. No notifications for document or folder

29/11/2023 - V7.0.9
#####################################

#### Bugs
1. Fixed document approval notification
2. Defaults false for approved in documents
3. Added uncalled_amount to commitment
4. Fixed bug in account entry allocation engine generate custom field
5. Added methods to enable / disable permissions for all investor entities

#### New Account Allocation for Acounting and Reporting
1. Added rule_for Accounting or Reporting, and every account entry will now capture, which rule was used to generate it.
2. Run rules for Accounting and Reporting separately
3. Use reporting entries in word templates with reporting_xxxx


29/11/2023 - V7.0.7
#####################################

#### Bugs
1. Better remittance email messages
2. Better templating for CDP, for Sirius 
3. Fixed approvals for generated docs end dates
4. Fixed issue with investor notice

29/11/2023 - V7.0.6
#####################################

#### Delete All for Funds 
1. Added delete all button for funds
2. Minor fix for fund col in commitments filter view

28/11/2023 - V7.0.5
#####################################

#### Import Uploads Sanitization ####